# fastnbt

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md
.github/workflows/: rust.yml
anvil-wasm/: Cargo.toml  README.md
anvil-wasm/src/: biome.rs  lib.rs  palette.rs
anvil-wasm/www/: package-lock.json  package.json  tsconfig.json  webpack.config.js
anvil-wasm/www/src/: bootstrap.js  index.html  index.js  index.ts  worker-pool.js  worker-pool.ts  worker.js
app/: README.md  index.html  package-lock.json  package.json
app/src/: AnvilLayer.ts  App.tsx  Ribbon.css  Ribbon.tsx  WorldSelect.tsx  openWorld.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: anvil.icns  icon.icns
app/src-tauri/src/: error.rs  leveldat.rs  main.rs  palette.rs  players.rs  render.rs
benchmarks/: 01-11-2020.md
fastanvil/: Cargo.toml
fastanvil/benches/: chunk_parse.rs  complete_chunk.rs
fastanvil/benches/resources/: chunk.nbt
fastanvil/examples/: anvil-palette-swap.rs  chunk-dump-ex.rs  chunk-dump.rs  complete-chunk.rs  dump-mca.rs  iter-chunk-block.rs
fastanvil/resources/: 1.12.chunk  1.17.0.chunk  1.17.1-custom-heights.chunk  1.17.1-custom-heights2.chunk  1.17.1.chunk  1.19.4.mca  21w44a-test1.nbt  etho-empty.chunk  etho-end-r.-6.-1.c.7.25.nbt  etho-max-heights.chunk  etho-old-heightmaps.chunk  etho-old-in-new.chunk  etho-old-in-new2.chunk  etho.chunk  forge-1.20.1.nbt  issue99-chunk.nbt  unicode.chunk
fastanvil/src/: biome.rs  bits.rs  dimension.rs  files.rs  java.rs  lib.rs  region.rs  render.rs  rendered_palette.rs  types.rs
fastanvil/src/complete/: chunk.rs  mod.rs  section.rs  section_tower.rs
fastanvil/src/java/: block.rs  blockstates.rs  chunk.rs  chunk_block_iter.rs  heightmaps.rs  mod.rs  pre13.rs  pre18.rs  section.rs  section_data.rs  section_tower.rs
fastanvil/src/java/pre13/: mod.rs  pre13_block_names.rs
fastanvil/src/test/: complete_chunk.rs  mod.rs  region.rs  rogue_chunks.rs  section_data.rs  standard_chunks.rs  unicode_chunk.rs
fastanvil/src/tex/: mod.rs  test.rs
fastnbt/: Cargo.toml  README.md
fastnbt/examples/: avoid-allocation.rs  change-world-spawn-value.rs  change-world-spawn.rs  chunk-dump.rs  fastnbt-value.rs  nbt-dump.rs  simple-deserialize.rs
fastnbt/src/: arrays.rs  bits.rs  borrow.rs  de.rs  de_arrays.rs  error.rs  input.rs  lib.rs  macros.rs  ser.rs  stream.rs  value.rs
fastnbt/src/anvil/: biome.rs  bits.rs  draw.rs  mod.rs  render.rs  types.rs
fastnbt/src/de2/: de_arrays.rs  input.rs  mod.rs  test.rs
fastnbt/src/nbt/: de.rs  error.rs  mod.rs  stream.rs  tokenizer.rs
fastnbt/src/nbt/test/: de.rs  mod.rs  stream.rs  tokenizer.rs
fastnbt/src/nbt2/: de.rs  error.rs  mod.rs
fastnbt/src/nbt2/test/: builder.rs  de.rs  mod.rs
fastnbt/src/ser/: anon_serializer.rs  array_serializer.rs  mod.rs  name_serializer.rs  seq_serializer.rs  serializer.rs  write_nbt.rs
fastnbt/src/test/: builder.rs  de.rs  de_arrays.rs  fuzz.rs  macros.rs  minecraft_chunk.rs  mod.rs  ser.rs  stream.rs  value.rs
fastnbt/src/test/resources/: chunk1.14.nbt  mod.rs
fastnbt/src/test/value/: de.rs  mod.rs  ser.rs
fastnbt/src/tex/: mod.rs  test.rs
fastnbt/src/value/: array_serializer.rs  de.rs  mod.rs  ser.rs
fastsnbt/: Cargo.toml  README.md
fastsnbt/src/: de.rs  error.rs  input.rs  lib.rs  parser.rs
fastsnbt/src/ser/: array_serializer.rs  mod.rs  name_serializer.rs
fastsnbt/src/test/: builder.rs  de_test.rs  mod.rs
fastsnbt/src/tests/: de_tests.rs  mod.rs  ser_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialize_chunk.rs  deserialize_value.rs  read_region.rs  serialize_value.rs
src/: lib.rs
src/anvil/: bits.rs  mod.rs
src/nbt/: mod.rs
src/nbt/test/: builder.rs
studies/: advanced-state.md
tile-server/: Cargo.toml
tile-server/public/: index.html
tile-server/src/: main.rs
tools/: Cargo.toml
tools/src/: lib.rs
