[package]
name = "anvil-wasm"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.68"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
fastnbt = { path = "../fastnbt", version = "0.8.0" }
image = "0.23.4"
serde_json = "1.0"
base64 = "0.13"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false