[package]
name = "anvil-wasm"
version = "0.1.0"
authors = ["owengage@gmail.com"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.68"
console_error_panic_hook = { version = "0.1.6", optional = true }
fastnbt = { path = "../fastnbt", version = "0.10.0" }
fastanvil = { path = "../fastanvil", version = "0.10.0" }
image = "0.23.4"
serde_json = "1.0"
base64 = "0.13"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]