[package]
name = "fastanvil"
description = "Minecraft Anvil library"
repository = "https://github.com/owengage/fastnbt"
version = "0.23.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
fastnbt = { path = "../fastnbt", version = "1" }
flate2 = "1.0"
num_enum = "0.5"
image = "0.23"
byteorder = "1.3"
bit_field = "0.10"
serde = { version = "1.0", features= ["derive"] }
log = "0.4"
once_cell = "1.9"
hematite-nbt = "0.5"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "chunk_parse"
harness = false
