[package]
name = "fastanvil"
description = "Minecraft Anvil library"
repository = "https://github.com/owengage/fastnbt"
version = "0.31.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
fastnbt = { path = "../fastnbt", version = "2" }
flate2 = "1.0"
num_enum = "0.5"
byteorder = "1.3"
bit_field = "0.10"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
once_cell = "1.9"

# Deps for render feature.
image = { version = "0.23", default-features = false, optional = true }
tar = { version = "0.4", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.4"

[features]
default = ["render"]
render = ["dep:image", "dep:tar", "dep:serde_json"]

[[bench]]
name = "chunk_parse"
harness = false

[[bench]]
name = "complete_chunk"
harness = false
