[package]
name = "fastnbt"
description = "Minecraft NBT (and more) parser aiming for high speed parsing."
repository = "https://github.com/owengage/fastnbt"
readme = "README.md"
version = "0.18.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
byteorder = "1"
thiserror = "1"

[dev-dependencies]
flate2 = "1"
