[package]
name = "fastnbt"
description = "Serde deserializer for Minecraft's NBT format"
repository = "https://github.com/owengage/fastnbt"
readme = "README.md"
version = "1.1.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
byteorder = "1"
cesu8 = "1.1"

[dev-dependencies]
flate2 = "1"
