[package]
name = "fastnbt"
description = "Serde deserializer for Minecraft's NBT format"
repository = "https://github.com/owengage/fastnbt"
readme = "README.md"
version = "1.3.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "nbt", "serde"]
categories = ["parser-implementations"]

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
byteorder = "1"
cesu8 = "1.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.5"
serde_with = { version = "1" }


[features]
arbitrary1 = ["arbitrary"]

[dev-dependencies]
flate2 = "1"
