[package]
name = "fastsnbt"
description = "Serde deserializer for Minecraft's stringified NBT format"
repository = "https://github.com/owengage/fastnbt"
readme = "README.md"
version = "0.2.0"
authors = ["Owen Gage <owengage@gmail.com>", "GrizzlT <grizz@falconmc.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["minecraft", "nbt", "snbt", "serde"]
categories = ["parser-implementations"]

[dependencies]
serde = { version = "1" }
byteorder = "1"
itoa = "1"
ryu = "1"
nom = "7"

[dev-dependencies]
fastnbt = "2"
