[package]
name = "fastnbt-tools"
description = "tools built with fastnbt"
version = "0.2.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
fastnbt = { path = "..", version = "0.2.0" }
rayon = "1.3.0"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
image = "0.23.4"
clap = "2.33.1"