[package]
name = "fastnbt-tools"
description = "tools built with fastnbt"
version = "0.9.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
fastnbt = { path = "../fastnbt", version = "0.9.0" }
fastanvil = { path = "../fastanvil", version = "0.9.0" }
rayon = "1.3.0"
flate2 = "1.0"
image = "0.23.4"
clap = "2.33.1"
serde_json = "1.0"
serde = { version = "1.0.111", features=["derive"] }
tar = "0.4"