[package]
name = "fastnbt-tools"
description = "tools built with fastnbt"
version = "0.23.0"
authors = ["Owen Gage <owengage@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
fastnbt = { path = "../fastnbt", version = "1" }
fastanvil = { path = "../fastanvil", version = "0.23" }
rayon = "1.3.0"
flate2 = "1.0"
image = "0.23.4"
clap = "2.33.1"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0.111", features=["derive"] }
tar = "0.4"
log = "0.4"
env_logger = "0.8"
