[package]
name = "anvil-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
fastanvil = { version = "0.29.0", path = "../../fastanvil" }
fastnbt = { version = "2", path = "../../fastnbt" }
tauri = { version = "1.2", features = [
    "dialog-open",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "os-all",
    "path-all",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7.0"
log = "0.4"
env_logger = "0.10.0"
anyhow = "1.0.69"
flate2 = "1.0.25"
tar = "0.4.38"
image = "0.23.4"
base64-serde = "0.7.0"
base64 = "0.21.0"

# [profile.dev.package.fastnbt]
# opt-level = 3

# [profile.dev.package.fastanvil]
# opt-level = 3


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
